--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,10 +5,19 @@
     .about-section-container {
         border-radius: 0;
     }
+    section.hero-section::after {
+        right: 0;
+    }
 }
 @media screen and (max-width: 991px) {
     .container {
         padding: 0 12px;
+    }
+    .topbar {
+        display: none !important;
+    }
+    main.main-area {
+        margin-top: 65px;
     }
     body.active-menu a.site-logo img.white {
         display: block;
@@ -169,7 +178,7 @@
 }
 @media screen and (max-width: 767px) {
     h1 {
-        font-size: 48px;
+        font-size: 44px;
     }
     h2 {
         font-size: 36px;
@@ -195,7 +204,6 @@
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
                 flex-direction: column;
-        text-align: center;
         padding: 48px 0;
         gap: 24px;
     }
@@ -216,7 +224,7 @@
             -ms-flex-pack: center;
                 justify-content: center;
     }
-    .services-banner-content > img {
+    .services-banner-content img {
         border-radius: 24px;
     }
     .services-box {
@@ -236,11 +244,14 @@
         height: 180px;
         right: 0;
     }
-    section.contact-section {
-        background-color: #F0F9FE;
-    }
     .contact-content:after {
-        content: none;
+        width: calc(100% + 24px);
+        left: -12px;
+        height: calc(100% - 10%);
+        top: 5.5%;
+    }
+    .contact-content {
+        padding-top: 0;
     }
     .projects-details-content img {
         border-radius: 16px;
